# controller-tuya

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: agent-learnings.md
.github/workflows/: claude-md-lint.yml
src/tuya_agent/: __init__.py  __main__.py  auth.py  client.py  collector.py  config.py  devices.py  events.py  firmware.py  groups.py  ir.py  location.py  locks.py  logs.py  notifications.py  scenes.py  server.py  spaces.py  storage.py  templates.py  timers.py  tools.py  watcher.py  weather.py
src/tuya_agent/static/: index.html
tests/: test_auth.py  test_client.py  test_collector.py  test_config.py  test_firmware.py  test_groups.py  test_ir.py  test_location.py  test_locks.py  test_main.py  test_notifications.py  test_server.py  test_spaces.py  test_storage.py  test_templates.py  test_timers.py  test_tools.py  test_watcher.py  test_weather.py
