[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuya-agent-tools"
version = "0.1.0"
description = "Agent tools for interacting with the Tuya IoT ecosystem"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "websockets>=13.0,<15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tuya_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
