[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tuya-agent-tools"
version = "0.1.0"
description = "Agent tools for interacting with the Tuya IoT ecosystem"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pycryptodome>=3.20,<4",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "uvicorn[standard]>=0.32,<1",
    "websockets>=13.0,<15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]

[project.scripts]
tuya-agent = "tuya_agent.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tuya_agent"]

[tool.hatch.build.targets.wheel.force-include]
"src/tuya_agent/static" = "tuya_agent/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
